samples/_failures_safe/1761690581_c55125_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a56d8a36.c: In function ‘main’:
./samples/SAFE/__tmp_a56d8a36.c:150:9: error: expected expression at end of input
  150 |         if (decompressed.data != NULL && decompressed.size > 0)
      |         ^~
./samples/SAFE/__tmp_a56d8a36.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a56d8a36.c:150:9: error: expected declaration or statement at end of input
